# hyper-util

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yml  rustdoc-preview.yml
examples/: client.rs  server.rs  server_graceful.rs  single_threaded_server.rs  tower_server.rs
pr-230/: crates.js  help.html  settings.html  src-files.js
pr-230/hyper_util/: all.html  index.html
pr-230/hyper_util/client/: index.html  sidebar-items.js
pr-230/hyper_util/client/legacy/: index.html  struct.Builder.html  struct.Client.html  struct.Error.html  struct.ResponseFuture.html
pr-230/hyper_util/client/legacy/connect/: fn.capture_connection.html  index.html  struct.CaptureConnection.html  struct.Connected.html  struct.HttpConnector.html  struct.HttpInfo.html  trait.Connect.html  trait.Connection.html
pr-230/hyper_util/client/pool/: index.html  sidebar-items.js  struct.Singleton.html
pr-230/hyper_util/client/pool/cache/: fn.builder.html  index.html  sidebar-items.js  struct.Builder.html  struct.Cache.html  struct.Cached.html
pr-230/hyper_util/client/pool/map/: index.html  sidebar-items.js  struct.Builder.html  struct.Map.html
pr-230/hyper_util/client/pool/negotiate/: enum.Negotiated.html  fn.builder.html  index.html  sidebar-items.js  struct.Builder.html  struct.Negotiate.html
pr-230/hyper_util/client/pool/singleton/: index.html  sidebar-items.js  struct.Singleton.html
pr-230/hyper_util/client/proxy/: index.html
pr-230/hyper_util/client/proxy/matcher/: index.html  sidebar-items.js  struct.Builder.html  struct.Intercept.html  struct.Matcher.html  trait.IntoValue.html
pr-230/hyper_util/rt/: index.html
pr-230/hyper_util/rt/tokio/: index.html  struct.TokioExecutor.html  struct.TokioIo.html  struct.TokioTimer.html  struct.WithHyperIo.html  struct.WithTokioIo.html
pr-230/hyper_util/server/: index.html
pr-230/hyper_util/server/conn/: index.html
pr-230/hyper_util/server/conn/auto/: index.html  struct.Builder.html  struct.Connection.html  struct.Http1Builder.html  struct.Http2Builder.html  struct.UpgradeableConnection.html  trait.HttpServerConnExec.html
pr-230/hyper_util/server/graceful/: index.html  sidebar-items.js  struct.GracefulShutdown.html  struct.Watcher.html  trait.GracefulConnection.html
pr-230/hyper_util/service/: index.html  struct.TowerToHyperService.html  struct.TowerToHyperServiceFuture.html
pr-230/search.index/: 0012ced4f8c8.js  037fcd8e10ee.js  0467398cbeab.js  04b0b4229d44.js  04c34eed5b01.js  04c9dad72b2e.js  06836fe0c74f.js  0685a390684d.js  06897fa4c2a5.js  06a0908237e1.js  06da1239f429.js  082ba2131a91.js  090ae5a345e8.js  095838360075.js  0969a8387822.js  09ad0bf29223.js  09c594f3e9f0.js  0a4fd6d38af3.js  0ab1555d9f05.js  0abf279ede20.js  0ae71e19a16b.js  0b82dfd258e3.js  0b8f9785ab7a.js  0c37cc7cda6f.js  0c79422a555d.js  0c7e54b00baf.js  0d31919439d3.js  0e8a64dd68c3.js  0f2cabb84463.js  115fefc91e17.js  11d19863ecaf.js  123adc9d5e66.js  12836b1a40fc.js  13c3714f0a23.js  14a6600e8b26.js  158278275503.js  1660657f9aba.js  16ce52b93aac.js  175b1d76ae09.js  1836e77289e9.js  (+290 more)
pr-230/search.index/crateNames/: 9c5742c61040.js
pr-230/search.index/desc/: 36fdceb923fd.js  6d2bfa8499d0.js  719346b83f60.js  ae1e12fd3f9d.js
pr-230/search.index/entry/: 40a4eec95022.js  41cb44cbe53c.js  7080eb0e049e.js  73715a0fb9a8.js
pr-230/search.index/function/: 8bab7151e14a.js  a76bb51d1532.js  d8e519e755c6.js  fa6b7cfc078a.js
pr-230/search.index/generic_inverted_index/: 164ef88a549b.js  5687c079445a.js  b0054a205166.js  cba450400e87.js
pr-230/search.index/name/: 2da805ca8025.js  4cc38a569b33.js  75106f5e0aa7.js  b3585c2d33f6.js
pr-230/search.index/normalizedName/: 03150a8c1693.js  95e2fa7d2205.js  ad8f21db179d.js  f66474522b6e.js
pr-230/search.index/path/: 50168ec55d88.js  57c72c5ed071.js  77fcd2ab0b54.js  c9e8c1218dba.js
pr-230/search.index/type/: 563e23b3d18f.js  86dc5d3c940a.js  8b9997afa9f4.js  e84bedbb2dc3.js
pr-230/src/hyper_util/: error.rs.html  lib.rs.html
pr-230/src/hyper_util/client/: mod.rs.html
pr-230/src/hyper_util/client/legacy/: client.rs.html  mod.rs.html  pool.rs.html
pr-230/src/hyper_util/common/: exec.rs.html  future.rs.html  lazy.rs.html  mod.rs.html  rewind.rs.html  sync.rs.html  timer.rs.html
pr-230/src/hyper_util/rt/: io.rs.html  mod.rs.html  tokio.rs.html
pr-230/src/hyper_util/server/: graceful.rs.html  mod.rs.html
pr-230/src/hyper_util/service/: glue.rs.html  mod.rs.html  oneshot.rs.html
pr-230/trait.impl/core/clone/: trait.Clone.js
pr-230/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
pr-230/trait.impl/core/default/: trait.Default.js
pr-230/trait.impl/core/error/: trait.Error.js
pr-230/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
pr-230/trait.impl/core/hash/: trait.Hash.js
pr-230/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
pr-230/trait.impl/hyper/rt/: trait.Executor.js
pr-230/trait.impl/tower_service/: trait.Service.js
src/: body.rs  error.rs  lib.rs  service.rs
src/client/: client.rs  conn.rs  legacy.rs  mod.rs  pool.rs  service.rs
src/client/connect/: config.rs  http.rs  mod.rs  pool.rs
src/client/connect/dns/: mod.rs  tokio.rs
src/client/connect/http/: mod.rs  tokio.rs
src/client/connect/tcp/: mod.rs  tokio.rs
src/client/legacy/: client.rs  mod.rs  pool.rs
src/client/legacy/connect/: capture.rs  dns.rs  http.rs  mod.rs
src/client/pool/: cache.rs  expire.rs  map.rs  mod.rs  negotiate.rs  singleton.rs
src/client/proxy/: builder.rs  matcher.rs  mod.rs  no_proxy.rs  utils.rs
src/client/services/: http1_request_target.rs  mod.rs  set_host.rs
src/common/: buf.rs  exec.rs  lazy.rs  mod.rs  rewind.rs  timer.rs
src/rt/: io.rs  mod.rs  tokio.rs  tokio_executor.rs  tokio_io.rs
src/server/: conn.rs  graceful.rs  mod.rs
src/server/conn/: auto.rs  mod.rs
src/server/conn/auto/: mod.rs
src/service/: mod.rs  oneshot.rs
src/util/: mod.rs  prepend_async_read.rs
tests/: legacy_client.rs  proxy.rs
tests/test_utils/: mod.rs
(+70 files in other folders)
