[package]
name = "hyper-util"
version = "0.0.0"
description = "hyper utilities"
readme = "README.md"
homepage = "https://hyper.rs"
documentation = "https://docs.rs/hyper-util"
repository = "https://github.com/hyperium/hyper-util"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]
edition = "2018"

publish = false # no accidents while in dev

[dependencies]
hyper = "=1.0.0-rc.4"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
http = "0.2"

once_cell = "1.14"

pin-project-lite = "0.2.4"
socket2 = "0.5"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["net", "rt", "time"] }
tower-service = "0.3"
tower = { version = "0.4", features = ["make", "util"] }

[dev-dependencies]
bytes = "1"
http-body-util = "0.1.0-rc.3"
tokio = { version = "1", features = ["macros", "test-util"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
pnet_datalink = "0.27.2"

[features]
default = []

# Shorthand to enable everything
full = ["client", "server", "http1", "http2", "tcp", "runtime"]

client = ["hyper/client"]
server = ["hyper/server"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

tcp = []
runtime = []

# internal features used in CI
__internal_happy_eyeballs_tests = []

[[example]]
name = "client"
required-features = ["client", "http1", "tcp", "runtime"]
