[package]
name = "hyper-util"
version = "0.1.10"
description = "hyper utilities"
readme = "README.md"
homepage = "https://hyper.rs"
documentation = "https://docs.rs/hyper-util"
repository = "https://github.com/hyperium/hyper-util"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]
edition = "2021"
rust-version = "1.63"

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hyper = "1.6.0"
base64 = { version = "0.22", optional = true }
bytes = "1.7.1"
futures-channel = { version = "0.3", optional = true }
futures-util = { version = "0.3.16", default-features = false }
http = "1.0"
http-body = "1.0.0"
ipnet = { version = "2.9", optional = true }
percent-encoding = { version = "2.3", optional = true }
pin-project-lite = "0.2.4"
socket2 = { version = "0.5", optional = true, features = ["all"] }
tracing = { version = "0.1", default-features = false, features = [
    "std",
], optional = true }
tokio = { version = "1", optional = true, default-features = false }
tower-service = { version = "0.3", optional = true }

# Conditional dependencies for system proxy support
[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = { version = "0.6.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.55.0", optional = true }

[dev-dependencies]
hyper = { version = "1.4.0", features = ["full"] }
bytes = "1"
http-body-util = "0.1.0"
tokio = { version = "1", features = ["macros", "test-util", "signal"] }
tokio-test = "0.4"
pretty_env_logger = "0.5"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dev-dependencies]
pnet_datalink = "0.35.0"

[features]
default = ["client-proxy-env"]

# Shorthand to enable everything
full = [
    "client",
    "client-legacy",
    "server",
    "server-auto",
    "server-graceful",
    "service",
    "http1",
    "http2",
    "tokio",
    "tracing",
    "system-proxies"
]

client = [
    "hyper/client",
    "dep:tracing",
    "dep:futures-channel",
    "dep:tower-service",
]
client-legacy = ["client", "dep:socket2", "tokio/sync"]
client-proxy-env = ["client", "dep:base64", "dep:ipnet", "dep:percent-encoding"]

server = ["hyper/server"]
server-auto = ["server", "http1", "http2"]
server-graceful = ["server", "tokio/sync", "futures-util/alloc"]

service = ["dep:tower-service"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

tokio = ["dep:tokio", "tokio/net", "tokio/rt", "tokio/time"]

tracing = ["dep:tracing"]

system-proxies = ["system-configuration", "winreg"]

# internal features used in CI
__internal_happy_eyeballs_tests = []

[[example]]
name = "client"
required-features = ["client-legacy", "http1", "tokio"]

[[example]]
name = "server"
required-features = ["server", "http1", "tokio"]

[[example]]
name = "server_graceful"
required-features = ["tokio", "server-graceful", "server-auto"]
